# Modcord

./: .env.example  .env.template  .gitattributes  .gitignore  AGENTS.md  BATCHING_DESIGN.md  BATCH_PROCESSING_IMPLEMENTATION.md  CLAUDE.md  COMPLETION_REPORT.md  CONTRIBUTING.md  Contributing.md  DEVELOPMENT.md  FIX_SUMMARY.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  LICENSE.md  LOGIC.md  MULTIMODAL_IMAGE_UPDATE.md  README.md  REFACTORING_SUMMARY.md  Run_Pretrained.ipynb  TESTING.md  TODO.md  VALIDATION.py  ai_model.py  bot.py  bot_config.py  bot_helper.py  build.gradle.kts  config.yml  config_loader.py  debug_test.py  demo_batching.py  gradle.properties  gradlew  guided_decoding_multi_image.py  logger.py  main.py  message_batching.md  moderation_logic.md  (+24 more)
.claude/: settings.local.json
.github/: copilot-instructions.md
cogs/: __init__.py  debug.py  events.py  general.py  moderation.py  util.py
config/: app_config.yml  app_config.yml.example  commands.json  system_prompt.md
data/: config.yml
examples/: FULL_AI_INPUT_EXAMPLE.json  FULL_AI_OUTPUT_EXAMPLE.json
finetune/: Qwen3_VL_(8B)-Vision.ipynb  Qwen3_VL_UNCENSORED_FT.ipynb
gradle/: libs.versions.toml
hacks/: interface.patch  workarounds.md
modcord/: __init__.py
scripts/: Run_Pretrained.ipynb  convert2tensorrt.ipynb  download_model.py  guided_decoding_multi_image.py  image_test_1.py  load_model_test.py  quantize.ipynb  run_llm.py  tensorrt_conversion.ipynb  test_multi_image.py  working_multi_image.py
src/: __init__.py  ai_model.py  config_loader.py  logger.py  main.py
tests/: README.md  RUN_ALL_TESTS.py  __init__.py  conftest.py  demo_batching.py  test_actions.py  test_ai_core.py  test_ai_lifecycle.py  test_ai_model.py  test_ai_moderation_processor.py  test_ai_moderation_processor_additional.py  test_ai_moderation_processor_more.py  test_ai_moderation_processor_workers.py  test_ai_moderation_processor_workers_more.py  test_ai_service.py  test_app_configuration.py  test_batching.py  test_bot.py  test_bot_helper.py  test_bot_state.py  test_cogs.py  test_cogs_debug.py  test_cogs_more.py  test_config_loader.py  test_console.py  test_database.py  test_debug_cmds.py  test_discord_utils.py  test_discord_utils_actions.py  test_discord_utils_additional.py  test_discord_utils_async.py  test_discord_utils_extended.py  test_discord_utils_supplemental.py  test_discord_utils_utility.py  test_embeds.py  (+25 more)
(+337 files in other folders)
