[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modcord"
version = "0.0.1"
description = "A Discord bot for moderation using AI"
requires-python = ">=3.12,<3.14"
dependencies = []

[project.scripts]
modcord = "modcord.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
modcord = { workspace = true }

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "jsonschema>=4.25.1",
    "modcord",
    "openai>=2.15.0",
    "prompt-toolkit>=3.0.52",
    "py-cord>=2.6.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "wandb>=0.23.1",
    "weave>=0.52.23",
]
