[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modcord"
version = "2.0.0"
description = "A Discord bot for moderation using AI"
requires-python = ">=3.11,<3.14"
dependencies = [
    "openai>=2.15.0",
    "py-cord>=2.6.1",
    "wandb>=0.24.2",
    "weave>=0.52.26",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "jsonschema>=4.25.1",
    "aiosqlite>=0.21.0",
    "prompt-toolkit>=3.0.52",
    "rich>=14.2.0",
]

[project.scripts]
modcord = "modcord.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
modcord = { workspace = true }

[dependency-groups]
build = [
    "nuitka>=4.0.1",
]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
